# beatsaver-api

./: Cargo.toml  Dockerfile  README.md
src/: builders.rs  client.rs  enums.rs  models.rs
src/models/: enums.rs  map.rs  playlist.rs  search.rs  user.rs
tests/: client_test.rs
tests/common/: mod.rs
