[package]
name = "beatsaver-api"
version = "0.1.5"
authors = ["Pochama <mercworld@pocha.moe>"]
description = "A Rust API wrapper for the Beatsaver API."
edition = "2024"

[lib]
name = "beatsaver_api"

[[bin]]
name = "clienttest"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.12" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
url = "2.5.4"
